--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Email-MIME-Kit-KitReader-SWAK
 
+1.001     2009-04-29
+          add _set_reader, to be shamelessly abused later
+
 1.000     2009-03-09
           first revision; have fun!
