--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Email-MIME-Kit-KitReader-SWAK
 
+1.093060  2009-11-02
+          require and rely on the newer form of Path::Resolver entities
+
 1.001     2009-04-29
           add _set_reader, to be shamelessly abused later
 
