prep next release

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Email-MIME-Kit-KitReader-SWAK
 
 {{$NEXT}}
+          fix github links
 
 1.093062  2013-08-12 21:47:16 America/New_York
           update bugtracker and repo metadata
