--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Email-MIME-Kit-KitReader-SWAK
 
 {{$NEXT}}
+        - update dist metadata
 
 1.093063  2014-01-17 23:51:51-05:00 America/New_York
           fix github links
