prep next release, update author info

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Email-MIME-Kit-KitReader-SWAK
 
 {{$NEXT}}
+        - update author contact info
 
 1.093064  2022-10-22 16:27:47-04:00 America/New_York
         - update dist metadata
